src/parser/rbc.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { S: peg$parseS },
      peg$startRuleFunction  = peg$parseS,

      peg$c0 = function(ss) { return {xml: [...jsonML2X(elem('Module', ss))].join('\n'), json: ss} },
      peg$c1 = function(h, s) { return s},
      peg$c2 = function(h, t) { return [h].concat(t) },
      peg$c3 = function(ln, v) {
      	let {name, range} = ln || {};
      	if (range) {
      		let attr = {from: range.a, to: range.b};
      		if (name) attr.name = name;
      		return elem('LetArr', attr, [v]);
      	} else {
      		if (!name) return res;
      		return elem('Let', {name}, [v]);
      	}
      	return elem('Let', {name: ln.name}, [v])
      },
      peg$c4 = function(args, chain) { return elem('Decl', {args: (args || []).join(',')}, [chain]) },
      peg$c5 = function(h, a) { return a },
      peg$c6 = function(h, x) { return x },
      peg$c7 = function(h, t, v) {
      	return elem('Import', [h].concat(t).reduce((a, x) => Object.assign(a, x), {}), [v]);
      },
      peg$c8 = ":",
      peg$c9 = peg$literalExpectation(":", false),
      peg$c10 = function(name, as) { return as },
      peg$c11 = function(name, as) { return { ['arg-' + name]: as || name } },
      peg$c12 = function(h, op, s) { return {op, s} },
      peg$c13 = function(h, t) {
      	if (!t.length) return h;
      	return [h].concat(t).reduce((a, {op, s}) => elem(op, [a, s])); 
      	return t.length ? elem('Chain', [h].concat(t)) : h
      },
      peg$c14 = function(h, s) {return s},
      peg$c15 = function(h, t) { return t.length ? elem('Stack', [h].concat(t)) : h },
      peg$c16 = function(is, sl, os) {
      	let res = sl; //['Slice', [sl].concat(is)];
      	if (is) res = elem('SliceInp', [res].concat(is));
      	if (os) res = elem('SliceOut', [res].concat(os));
      	return res;
      	//return (is || os) ? `${sl}.slice(${is}, ${os})` : sl
      },
      peg$c17 = function(args, c) { return elem('Func', { args: args.join(',') }, c) },
      peg$c18 = function(id, as, ln) {
      		let {name, range} = ln || {};
      		let res = elem('New', {name: id}, as);
      		if (range) {
      			let attr = {from: range.a, to: range.b};
      			if (name) attr.name = name;
      			return elem('LetArr', attr, [res]);
      		} else {
      			if (!name) return res;
      			return elem('Let', {name}, [res]);
      		}
      	},
      peg$c19 = function(n) { return elem('Gain', n ? [n] : []) },
      peg$c20 = function(n) { return n },
      peg$c21 = function(name, range) { return {name, range} },
      peg$c22 = function(range) { return { range } },
      peg$c23 = function(nr) { return nr },
      peg$c24 = function(a, b) { return b },
      peg$c25 = function(a, b) { return {a, b: b || a} },
      peg$c26 = function(value) {
      	return elem('Num', {value});
      	//return elem('Num', {}, [value])
      },
      peg$c27 = function(name) {
      	return elem('Num', {name});
      	//return elem('Num', {}, [name])
      },
      peg$c28 = function(ss) { return ss.length > 1 ? elem('Seq', ss) : ss[0] },
      peg$c29 = function(h, p) { return p},
      peg$c30 = function() { return 'PConnect' },
      peg$c31 = function() { return 'XConnect' },
      peg$c32 = "=>",
      peg$c33 = peg$literalExpectation("=>", false),
      peg$c34 = "||",
      peg$c35 = peg$literalExpectation("||", false),
      peg$c36 = "->",
      peg$c37 = peg$literalExpectation("->", false),
      peg$c38 = "|",
      peg$c39 = peg$literalExpectation("|", false),
      peg$c40 = "=",
      peg$c41 = peg$literalExpectation("=", false),
      peg$c42 = /^[\n\r]/,
      peg$c43 = peg$classExpectation(["\n", "\r"], false, false),
      peg$c44 = /^[\t]/,
      peg$c45 = peg$classExpectation(["\t"], false, false),
      peg$c46 = " ",
      peg$c47 = peg$literalExpectation(" ", false),
      peg$c48 = ";",
      peg$c49 = peg$literalExpectation(";", false),
      peg$c50 = "{",
      peg$c51 = peg$literalExpectation("{", false),
      peg$c52 = "}",
      peg$c53 = peg$literalExpectation("}", false),
      peg$c54 = "(",
      peg$c55 = peg$literalExpectation("(", false),
      peg$c56 = ")",
      peg$c57 = peg$literalExpectation(")", false),
      peg$c58 = "[",
      peg$c59 = peg$literalExpectation("[", false),
      peg$c60 = "]",
      peg$c61 = peg$literalExpectation("]", false),
      peg$c62 = ",",
      peg$c63 = peg$literalExpectation(",", false),
      peg$c64 = /^[A-Z]/,
      peg$c65 = peg$classExpectation([["A", "Z"]], false, false),
      peg$c66 = /^[a-z]/,
      peg$c67 = peg$classExpectation([["a", "z"]], false, false),
      peg$c68 = /^[0-9]/,
      peg$c69 = peg$classExpectation([["0", "9"]], false, false),
      peg$c70 = function(id) { return id },
      peg$c71 = "*",
      peg$c72 = peg$literalExpectation("*", false),
      peg$c73 = "+",
      peg$c74 = peg$literalExpectation("+", false),
      peg$c75 = "-",
      peg$c76 = peg$literalExpectation("-", false),
      peg$c77 = ".",
      peg$c78 = peg$literalExpectation(".", false),
      peg$c79 = function(n) { return parseFloat(n) },
      peg$c80 = "_",
      peg$c81 = peg$literalExpectation("_", false),
      peg$c82 = /^[^{}"']/,
      peg$c83 = peg$classExpectation(["{", "}", "\"", "'"], true, false),
      peg$c84 = "\"",
      peg$c85 = peg$literalExpectation("\"", false),
      peg$c86 = /^[^"\] \/ [\] [.]/,
      peg$c87 = peg$classExpectation(["\"", "]", " ", "/", " ", "[", "]", " ", "[", "."], true, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseS() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsestatements();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsestatements() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsestatement();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseSSEP();
      if (s4 !== peg$FAILED) {
        s5 = peg$parsestatement();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c1(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseSSEP();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsestatement();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c1(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseSSEP();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestatement() {
    var s0;

    s0 = peg$parselet();
    if (s0 === peg$FAILED) {
      s0 = peg$parsedecl();
      if (s0 === peg$FAILED) {
        s0 = peg$parsechain();
        if (s0 === peg$FAILED) {
          s0 = peg$parseimport();
        }
      }
    }

    return s0;
  }

  function peg$parselet() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseletName();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseEQ();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsechain();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedecl() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parseId();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseargs();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseEQ();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsechain();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s2, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseargs() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseOPARENS();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseid();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parseCOMMA();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseid();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s4;
            s5 = peg$c5(s2, s6);
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parseCOMMA();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseid();
            if (s6 !== peg$FAILED) {
              peg$savedPos = s4;
              s5 = peg$c5(s2, s6);
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseCPARENS();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c2(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseimport() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseOBRACE();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseimp();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parseCOMMA();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseimp();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s4;
            s5 = peg$c6(s2, s6);
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parseCOMMA();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseimp();
            if (s6 !== peg$FAILED) {
              peg$savedPos = s4;
              s5 = peg$c6(s2, s6);
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseCBRACE();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseEQ();
            if (s5 !== peg$FAILED) {
              s6 = peg$parsechain();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c7(s2, s3, s6);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseimp() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseid();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parse_();
      if (s3 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s4 = peg$c8;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseid();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s2;
            s3 = peg$c10(s1, s5);
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c11(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseId();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s4 = peg$c8;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseId();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s2;
              s3 = peg$c10(s1, s5);
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c11(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsechain() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsestack();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parsechainOp();
      if (s4 !== peg$FAILED) {
        s5 = peg$parsestack();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c12(s1, s4, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parsechainOp();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsestack();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c12(s1, s4, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c13(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestack() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseslice();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseCOMMA();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseslice();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c14(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseCOMMA();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseslice();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c14(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c15(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseslice() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseportSlice();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseprim();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseportSlice();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c16(s1, s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseprim() {
    var s0;

    s0 = peg$parsecons();
    if (s0 === peg$FAILED) {
      s0 = peg$parseref();
      if (s0 === peg$FAILED) {
        s0 = peg$parsegroup();
        if (s0 === peg$FAILED) {
          s0 = peg$parsefunc();
        }
      }
    }

    return s0;
  }

  function peg$parsefunc() {
    var s0, s1, s2, s3, s4;
